<resources>
    <string name="app_name">SpaceGram</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="signout">Signout</string>
    <string name="direct">Direct</string>
    <string name="upload_new">Upload</string>
    <string name="delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spacegram">SpaceGram</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="new_here_signup">New here?? Signup</string>
    <string name="social">Login</string>
    <string name="register">Register</string>
    <string name="already_have_acc_login">Already have Acc??? Login</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="signup">Signup</string>
    <string name="notext">Add a Post</string>
    <string name="add_a_caption">Add a Caption</string>
    <string name="post">Post</string>
    <string name="name_invalid">Invalid</string>
    <string name="name_invali">Name : Invalid</string>
    <string name="uid_cheese_user">UID : Space User</string>
    <string name="posts">Posts</string>
    <string name="no_posts_upload">No Posts!! Upload</string>
    <string name="username">Username</string>
    <string name="likes">Likes</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="check_your_internet_connection_and_try_again">Check Your Internet and Try Again</string>
</resources>