<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall"
    tools:context=".Login">

    <ImageView
        android:id="@+id/tv_title"
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:layout_above="@id/tv_subtitle"
        android:layout_marginTop="60dp"


        android:background="@drawable/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/email_"
        android:layout_marginTop="40dp"

        android:fontFamily="@font/bungee_shade"
        android:text="@string/social"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_"
        android:layout_width="325dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle"
        android:layout_marginTop="20dp"
        app:hintTextAppearance="@color/black"
        app:hintTextColor="@color/black"


        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="325dp"
            android:layout_height="48dp"
            android:layout_above="@id/text"
            android:layout_marginTop="25dp"

            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/et_custom"
            android:textColor="@color/black"
            android:textColorHint="@color/black"

            android:padding="15dp"

            android:textSize="15sp"
            />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/text"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        tools:ignore="MissingConstraints"
        android:layout_centerInParent="true"
        app:hintTextAppearance="@color/black"
        app:hintTextColor="@color/black"



        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_" >

        <EditText
            android:id="@+id/edit_password"

            android:layout_width="325dp"
            android:layout_height="48dp"
            android:textColorHint="@color/black"


            android:background="@drawable/et_custom"
            android:layout_marginTop="0dp"

            android:hint="@string/password"
            android:textColor="@color/black"



            android:inputType="textPassword"
            android:padding="15dp"

            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/button_login"
        android:layout_width="325dp"
        android:layout_height="48dp"
        android:layout_below="@id/text"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_custom"
        android:text="@string/login"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text" />

    <ProgressBar
        android:id="@+id/plog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <TextView
        android:id="@+id/clickToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/new_here_signup"
        android:textColor="@android:color/white"

        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>